--- a/src/carousel.css
+++ b/src/carousel.css
@@ -37,9 +37,27 @@
   padding-bottom: 0.5rem;
   position: absolute;
   font-weight: bold;
-  background-color: rgba(169, 169, 169, 0.301);
+  background: rgba(160, 159, 159, 0.377);
   border-radius: 1rem;
   color: white;
   left: 5px;
   bottom: 10px;
+}
+
+.swiper-button-next:hover::after {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-radius: 0.375rem;
+  background: rgba(255, 255, 255, 0.377);
+}
+
+.swiper-button-prev:hover::after {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  border-radius: 0.375rem;
+  background: rgba(255, 255, 255, 0.377);
 }
