--- a/src/carousel.css
+++ b/src/carousel.css
@@ -62,3 +62,27 @@
   border-radius: 0.375rem;
   background: rgba(255, 255, 255, 0.377);
 }
+
+@media screen and (max-width: 640px) {
+  .swiper {
+    height: 15rem;
+  }
+  .swiper-slide p {
+    font-size: large;
+  }
+  .swiper-button-next {
+    visibility: hidden;
+  }
+  .swiper-button-prev {
+    visibility: hidden;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .swiper-button-next {
+    visibility: hidden;
+  }
+  .swiper-button-prev {
+    visibility: hidden;
+  }
+}
